# xarray-dataclass

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.devcontainer/: devcontainer.json
.doctrees/: environment.pickle  index.doctree
.doctrees/_apidoc/: xarray_dataclass.dataarray.doctree  xarray_dataclass.datamodel.doctree  xarray_dataclass.dataoptions.doctree  xarray_dataclass.dataset.doctree  xarray_dataclass.doctree  xarray_dataclass.typing.doctree
.github/: CONTRIBUTING.md
.github/workflows/: gh-pages.yml  pre-commit.yml  pypi.yml  test_docs.yml  tests.yml
_apidoc/: xarray_dataclass.dataarray.html  xarray_dataclass.datamodel.html  xarray_dataclass.dataoptions.html  xarray_dataclass.dataset.html  xarray_dataclass.html  xarray_dataclass.typing.html
_modules/: index.html
_modules/xarray_dataclass/: dataarray.html  datamodel.html  dataoptions.html  dataset.html
_sources/_apidoc/: xarray_dataclass.dataarray.rst.txt  xarray_dataclass.datamodel.rst.txt  xarray_dataclass.dataoptions.rst.txt  xarray_dataclass.dataset.rst.txt  xarray_dataclass.rst.txt  xarray_dataclass.typing.rst.txt
docs/: 404.md  conf.py  index.md
docs/_templates/: layout.html
src/xarray_dataclass/: __about__.py  typing.py
src/xarray_dataclasses/: __about__.py  __init__.py  datamodel.py  typing.py
tests/: test_data.py  test_dataarray.py  test_datamodel.py  test_dataset.py  test_typing.py
